2009-04-06  R.E. van der Luit <nippur@fedoraproject.org>

	* po/nl.po: Updated translations.

2009-04-06  Terry Chuang <tchuang@redhat.com>

	* po/zh_TW.po: Updated translations.

2009-04-03  Shankar Prasad <svenkate@redhat.com>

	* po/kn.po: Updated translations.

2009-04-03  Manoj Kumar Giri <mgiri@redhat.com>

	* po/or.po: Updated translations.

2009-04-03  Miloš Komarčević <kmilos@gmail.com>

	* po/sr.po: Updated translations.
	* po/sr@latin.po: Updated translations.

2009-04-03  Leah Liu <lliu@redhat.com>

	* po/zh_CN.po: Updated translations.

2009-04-03  Dmitry V. Levin  <ldv@altlinux.org>

	* libpamc/pamc_load.c (__pamc_exec_agent): Replace call to exit(3)
	in child process with call to _exit(2).
	* modules/pam_mkhomedir/pam_mkhomedir.c (create_homedir): Likewise.
	* modules/pam_unix/pam_unix_acct.c (_unix_run_verify_binary):
	Likewise.
	* modules/pam_unix/pam_unix_passwd.c (_unix_run_update_binary):
	Likewise.
	* modules/pam_unix/support.c (_unix_run_helper_binary): Likewise.
	* modules/pam_xauth/pam_xauth.c (run_coprocess): Likewise.
	* modules/pam_exec/pam_exec.c (call_exec): Replace all calls to
	exit(3) in child process with calls to _exit(2).
	* modules/pam_filter/pam_filter.c (set_filter): Likewise.
	* modules/pam_namespace/pam_namespace.c (inst_init,
	cleanup_tmpdirs): Likewise.

2009-03-27  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_unix/support.c (_unix_run_helper_binary): Don't
	ignore return value of write().

	* libpamc/include/security/pam_client.h (PAM_BP_ASSERT): Honour
	NDEBUG.
	* modules/pam_timestamp/pam_timestamp.c: don't ignore return
	values of lchown and fchown.

2009-03-25  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_mkhomedir/pam_mkhomedir.c: Make option handling
	reentrant (#2487654)
	(_pam_parse): Fix umask option.

	* modules/pam_unix/passverify.c: Fix typo.

	* modules/pam_issue/pam_issue.c: Fix compiler warning.
	* modules/pam_ftp/pam_ftp.c: Likewise.

2009-03-25  Pavol Šimo <palo.simo@gmail.com>
